# subscriptions

./: README.md  build.sh  config.example.xml  meson.build  meson.options  rest_module.vala
Controllers/: PlansController.vala  SubscriptionsController.vala  TypesController.vala
Dto/: DtoWhatsAppMessage.vala
Entities/: CustomerPlan.vala  Payment.vala  Plan.vala  Type.vala  UserPlan.vala
Helpers/: HelperDates.vala
Models/: PlansModel.vala  SubscriptionsModel.vala
Services/: ServiceWhatsApp.vala
sql/: 20240927_subscriptions_plans.sql  database.postgres.sql
test/: test  test_dates.vala
vapi/: readme.txt
